--- a/LLM_Chap_3/processing_data.ipynb
+++ b/LLM_Chap_3/processing_data.ipynb
@@ -420,6 +420,50 @@
     "metric = evaluate.load(\"glue\", \"mrpc\")\n",
     "metric.compute(predictions=class_preds, references=raw_datasets[\"validation\"][\"label\"])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab4b1da5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from accelerate import Accelerator\n",
+    "from torch.optim import AdamW\n",
+    "from transformers import AutoModelForSequenceClassification, get_scheduler\n",
+    "\n",
+    "accelerator = Accelerator()\n",
+    "\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(checkpoint, num_labels=2)\n",
+    "optimizer = AdamW(model.parameters(), lr=3e-5)\n",
+    "\n",
+    "train_dl, eval_dl, model, optimizer = accelerator.prepare(\n",
+    "    train_dataloader, eval_dataloader, model, optimizer\n",
+    ")\n",
+    "\n",
+    "num_epochs = 3\n",
+    "num_training_steps = num_epochs * len(train_dl)\n",
+    "lr_scheduler = get_scheduler(\n",
+    "    \"linear\",\n",
+    "    optimizer=optimizer,\n",
+    "    num_warmup_steps=0,\n",
+    "    num_training_steps=num_training_steps,\n",
+    ")\n",
+    "\n",
+    "progress_bar = tqdm(range(num_training_steps))\n",
+    "\n",
+    "model.train()\n",
+    "for epoch in range(num_epochs):\n",
+    "    for batch in train_dl:\n",
+    "        outputs = model(**batch)\n",
+    "        loss = outputs.loss\n",
+    "        accelerator.backward(loss)\n",
+    "\n",
+    "        optimizer.step()\n",
+    "        lr_scheduler.step()\n",
+    "        optimizer.zero_grad()\n",
+    "        progress_bar.update(1)"
+   ]
   }
  ],
  "metadata": {
